Bug 372587 - After duplicating class or interface return type of operations are lost
Summary: After duplicating class or interface return type of operations are lost
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other All
: NOR major
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-17 12:34 UTC by abel123
Modified: 2016-11-18 07:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.20.80 (KDE Applications 16.11.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description abel123 2016-11-17 12:34:30 UTC
If you duplicate class or interface, the return types of the operations are lost.
Comment 1 Ralf Habacker 2016-11-18 07:39:42 UTC
How to reproduce:
1. add a class 
2. add an operation with a return type
3. duplicate the class
-> the duplicated operation does not have any return type
Comment 2 Ralf Habacker 2016-11-18 07:41:17 UTC
Git commit 6e0b03fd72de37893568bf6aaf2d650ab51a8849 by Ralf Habacker.
Committed on 18/11/2016 at 07:41.
Pushed by habacker into branch 'Applications/16.12'.

Fix 'After duplicating class or interface return type of operations are lost'.
FIXED-IN:2.20.80 (KDE Applications 16.11.80)

M  +3    -0    umbrello/umlmodel/classifierlistitem.cpp

http://commits.kde.org/umbrello/6e0b03fd72de37893568bf6aaf2d650ab51a8849