Fix 'After duplicating class or interface return type of operations are lost'.

BUG:372587
FIXED-IN:2.20.80 (KDE Applications 16.11.80)